; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/qedi/extr_qedi_iscsi.c_qedi_session_create.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/qedi/extr_qedi_iscsi.c_qedi_session_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_cls_session = type { i32 }
%struct.iscsi_endpoint = type { %struct.qedi_endpoint* }
%struct.qedi_endpoint = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.Scsi_Host* }
%struct.Scsi_Host = type { i32 }
%struct.qedi_ctx = type { i64, i32 }

@QEDI_SQ_WQES_MIN = common dso_local global i64 0, align 8
@qedi_iscsi_transport = common dso_local global i32 0, align 4
@ISCSI_MAX_TARGET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Failed to setup session for ep=%p\0A\00", align 1
@.str.1 = private unnamed_addr constant [36 x i8] c"Failed to setup cmd pool for ep=%p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.iscsi_cls_session* (%struct.iscsi_endpoint*, i64, i64, i32)* @qedi_session_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.iscsi_cls_session* @qedi_session_create(%struct.iscsi_endpoint* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.iscsi_cls_session*, align 8
  %6 = alloca %struct.iscsi_endpoint*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.Scsi_Host*, align 8
  %11 = alloca %struct.iscsi_cls_session*, align 8
  %12 = alloca %struct.qedi_ctx*, align 8
  %13 = alloca %struct.qedi_endpoint*, align 8
  store %struct.iscsi_endpoint* %0, %struct.iscsi_endpoint** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %14 = load %struct.iscsi_endpoint*, %struct.iscsi_endpoint** %6, align 8
  %15 = icmp ne %struct.iscsi_endpoint* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %4
  store %struct.iscsi_cls_session* null, %struct.iscsi_cls_session** %5, align 8
  br label %74

17:                                               ; preds = %4
  %18 = load %struct.iscsi_endpoint*, %struct.iscsi_endpoint** %6, align 8
  %19 = getelementptr inbounds %struct.iscsi_endpoint, %struct.iscsi_endpoint* %18, i32 0, i32 0
  %20 = load %struct.qedi_endpoint*, %struct.qedi_endpoint** %19, align 8
  store %struct.qedi_endpoint* %20, %struct.qedi_endpoint** %13, align 8
  %21 = load %struct.qedi_endpoint*, %struct.qedi_endpoint** %13, align 8
  %22 = getelementptr inbounds %struct.qedi_endpoint, %struct.qedi_endpoint* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load %struct.Scsi_Host*, %struct.Scsi_Host** %24, align 8
  store %struct.Scsi_Host* %25, %struct.Scsi_Host** %10, align 8
  %26 = load %struct.Scsi_Host*, %struct.Scsi_Host** %10, align 8
  %27 = call %struct.qedi_ctx* @iscsi_host_priv(%struct.Scsi_Host* %26)
  store %struct.qedi_ctx* %27, %struct.qedi_ctx** %12, align 8
  %28 = load i64, i64* %7, align 8
  %29 = load %struct.qedi_ctx*, %struct.qedi_ctx** %12, align 8
  %30 = getelementptr inbounds %struct.qedi_ctx, %struct.qedi_ctx* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp sgt i64 %28, %31
  br i1 %32, label %33, label %37

33:                                               ; preds = %17
  %34 = load %struct.qedi_ctx*, %struct.qedi_ctx** %12, align 8
  %35 = getelementptr inbounds %struct.qedi_ctx, %struct.qedi_ctx* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  store i64 %36, i64* %7, align 8
  br label %44

37:                                               ; preds = %17
  %38 = load i64, i64* %7, align 8
  %39 = load i64, i64* @QEDI_SQ_WQES_MIN, align 8
  %40 = icmp slt i64 %38, %39
  br i1 %40, label %41, label %43

41:                                               ; preds = %37
  %42 = load i64, i64* @QEDI_SQ_WQES_MIN, align 8
  store i64 %42, i64* %7, align 8
  br label %43

43:                                               ; preds = %41, %37
  br label %44

44:                                               ; preds = %43, %33
  %45 = load %struct.Scsi_Host*, %struct.Scsi_Host** %10, align 8
  %46 = load i64, i64* %7, align 8
  %47 = load i32, i32* %9, align 4
  %48 = load i32, i32* @ISCSI_MAX_TARGET, align 4
  %49 = call %struct.iscsi_cls_session* @iscsi_session_setup(i32* @qedi_iscsi_transport, %struct.Scsi_Host* %45, i64 %46, i32 0, i32 4, i32 %47, i32 %48)
  store %struct.iscsi_cls_session* %49, %struct.iscsi_cls_session** %11, align 8
  %50 = load %struct.iscsi_cls_session*, %struct.iscsi_cls_session** %11, align 8
  %51 = icmp ne %struct.iscsi_cls_session* %50, null
  br i1 %51, label %57, label %52

52:                                               ; preds = %44
  %53 = load %struct.qedi_ctx*, %struct.qedi_ctx** %12, align 8
  %54 = getelementptr inbounds %struct.qedi_ctx, %struct.qedi_ctx* %53, i32 0, i32 1
  %55 = load %struct.qedi_endpoint*, %struct.qedi_endpoint** %13, align 8
  %56 = call i32 @QEDI_ERR(i32* %54, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), %struct.qedi_endpoint* %55)
  store %struct.iscsi_cls_session* null, %struct.iscsi_cls_session** %5, align 8
  br label %74

57:                                               ; preds = %44
  %58 = load %struct.qedi_ctx*, %struct.qedi_ctx** %12, align 8
  %59 = load %struct.iscsi_cls_session*, %struct.iscsi_cls_session** %11, align 8
  %60 = getelementptr inbounds %struct.iscsi_cls_session, %struct.iscsi_cls_session* %59, i32 0, i32 0
  %61 = load i32, i32* %60, align 4
  %62 = call i64 @qedi_setup_cmd_pool(%struct.qedi_ctx* %58, i32 %61)
  %63 = icmp ne i64 %62, 0
  br i1 %63, label %64, label %69

64:                                               ; preds = %57
  %65 = load %struct.qedi_ctx*, %struct.qedi_ctx** %12, align 8
  %66 = getelementptr inbounds %struct.qedi_ctx, %struct.qedi_ctx* %65, i32 0, i32 1
  %67 = load %struct.qedi_endpoint*, %struct.qedi_endpoint** %13, align 8
  %68 = call i32 @QEDI_ERR(i32* %66, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.1, i64 0, i64 0), %struct.qedi_endpoint* %67)
  br label %71

69:                                               ; preds = %57
  %70 = load %struct.iscsi_cls_session*, %struct.iscsi_cls_session** %11, align 8
  store %struct.iscsi_cls_session* %70, %struct.iscsi_cls_session** %5, align 8
  br label %74

71:                                               ; preds = %64
  %72 = load %struct.iscsi_cls_session*, %struct.iscsi_cls_session** %11, align 8
  %73 = call i32 @iscsi_session_teardown(%struct.iscsi_cls_session* %72)
  store %struct.iscsi_cls_session* null, %struct.iscsi_cls_session** %5, align 8
  br label %74

74:                                               ; preds = %71, %69, %52, %16
  %75 = load %struct.iscsi_cls_session*, %struct.iscsi_cls_session** %5, align 8
  ret %struct.iscsi_cls_session* %75
}

declare dso_local %struct.qedi_ctx* @iscsi_host_priv(%struct.Scsi_Host*) #1

declare dso_local %struct.iscsi_cls_session* @iscsi_session_setup(i32*, %struct.Scsi_Host*, i64, i32, i32, i32, i32) #1

declare dso_local i32 @QEDI_ERR(i32*, i8*, %struct.qedi_endpoint*) #1

declare dso_local i64 @qedi_setup_cmd_pool(%struct.qedi_ctx*, i32) #1

declare dso_local i32 @iscsi_session_teardown(%struct.iscsi_cls_session*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
